Adding config client

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,6 +18,8 @@ spring:
 
   application:
     name: product-service
+  config:
+    import: configserver:http://localhost:9296
 
 #eureka:
 #  instance:
