--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,9 @@ spring:
     name: product-service
   config:
     import: configserver:http://localhost:9296
+  cloud:
+    compatibility-verifier:
+      enabled: false
 
 #eureka:
 #  instance:
